mobile site nav bar alignment fix

--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,6 @@ h1 {
     padding: 0; /*ensures that content displays to edge of page */
 }
 
-/*
-.container {
-    width: 100%;  creating responsive layouts or centering content within a page 
-    margin: 0 auto;
-}
-*/
-
 /* CLARA M logo formatting */
 
 header h1 {
@@ -303,6 +296,7 @@ main {
     nav {
         width: 100%;
         overflow-x: auto;
+        margin-right: 0; /* To clear the desktop margin */
     }
 
     nav ul {
